--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -1,13 +1,20 @@
 {
   "locale": "en-US",
   "translations": {
-    "exampleWorkoutName": "My Workout Routine",
     "applicationName": "Tabata Max",
+    "exampleWorkoutName": "My Workout Routine",
+    "aboutDialogHeader": "About",
+    "closeAboutButtonLabel": "Close",
+    "applicationVersionLabel": "Version",
+    "copyrightNotice": "2025 - Márk Szabó",
+    "contactInformationLabel": "Contact",
+    "madeInLabel": "Made in",
     "backToHomeButtonLabel": "Back",
     "resumeButtonLabel": "Resume",
     "pauseButtonLabel": "Pause",
     "rewindButtonLabel": "Rewind",
     "forwardButtonLabel": "Forward",
+    "settingsDialogHeader": "Settings",
     "languageFormFieldLabel": "Language",
     "layoutFormFieldLabel": "Layout",
     "soundSwitchLabel": "Sound",
@@ -25,10 +32,12 @@
     "startWorkoutButtonDescriptionLabel": "Start Workout",
     "settingsIconButtonDescriptionLabel": "Settings",
     "moreMenuDescriptionLabel": "More",
-    "editIconButtonLabel": "Edit",
-    "editIconButtonDescriptionLabel": "Edit Workout",
-    "deleteIconButtonLabel": "Delete",
-    "deleteIconButtonDescriptionLabel": "Delete Workout",
+    "editWorkoutIconButtonLabel": "Edit",
+    "editWorkoutIconButtonDescriptionLabel": "Edit Workout",
+    "deleteWorkoutIconButtonLabel": "Delete",
+    "deleteWorkoutIconButtonDescriptionLabel": "Delete Workout",
+    "aboutIconButtonLabel": "About",
+    "aboutIconButtonDescriptionLabel": "About Tabata Max",
     "restoreWorkoutButtonLabel": "Restore",
     "workoutDeletedLabel": "Workout deleted.",
     "newWorkoutButtonLabel": "New Workout",
