--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -1,13 +1,20 @@
 {
   "locale": "hu-HU",
   "translations": {
-    "exampleWorkoutName": "Az én edzésem",
     "applicationName": "Tabata Max",
+    "exampleWorkoutName": "Az én edzésem",
+    "aboutDialogHeader": "Infó",
+    "closeAboutButtonLabel": "Bezár",
+    "applicationVersionLabel": "Verzió",
+    "copyrightNotice": "2025 - Szabó Márk",
+    "contactInformationLabel": "Kapcsolat",
+    "madeInLabel": "Európában készült",
     "backToHomeButtonLabel": "Vissza",
     "resumeButtonLabel": "Lejátszás",
     "pauseButtonLabel": "Szünet",
     "rewindButtonLabel": "Hátra",
     "forwardButtonLabel": "Előre",
+    "settingsDialogHeader": "Beállítások",
     "languageFormFieldLabel": "Nyelv",
     "layoutFormFieldLabel": "Elrendezés",
     "soundSwitchLabel": "Hang",
@@ -25,10 +32,12 @@
     "startWorkoutButtonDescriptionLabel": "Edzés indítása",
     "settingsIconButtonDescriptionLabel": "Beállítások",
     "moreMenuDescriptionLabel": "Több",
-    "editIconButtonLabel": "Szerkeszt",
-    "editIconButtonDescriptionLabel": "Edzés Szerkesztése",
-    "deleteIconButtonLabel": "Töröl",
-    "deleteIconButtonDescriptionLabel": "Edzés törlése",
+    "editWorkoutIconButtonLabel": "Szerkeszt",
+    "editWorkoutIconButtonDescriptionLabel": "Edzés Szerkesztése",
+    "deleteWorkoutIconButtonLabel": "Töröl",
+    "deleteWorkoutIconButtonDescriptionLabel": "Edzés törlése",
+    "aboutIconButtonLabel": "Infó",
+    "aboutIconButtonDescriptionLabel": "Infó a Tabata Max-ról",
     "restoreWorkoutButtonLabel": "Visszaállít",
     "workoutDeletedLabel": "Edzés törölve.",
     "newWorkoutButtonLabel": "Új Edzés",
