Deploy more mobile-friendly version 1.2.

--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -36,11 +36,15 @@
     "editWorkoutIconButtonDescriptionLabel": "Edit Workout",
     "deleteWorkoutIconButtonLabel": "Delete",
     "deleteWorkoutIconButtonDescriptionLabel": "Delete Workout",
-    "aboutIconButtonLabel": "About",
-    "aboutIconButtonDescriptionLabel": "About Tabata Max",
+    "newWorkoutIconButtonLabel": "New",
+    "newWorkoutIconButtonDescriptionLabel": "New workout",
     "restoreWorkoutButtonLabel": "Restore",
     "workoutDeletedLabel": "Workout deleted.",
+    "createWorkoutNavHeaderLabel": "New Workout",
+    "editWorkoutNavHeaderLabel": "Edit Workout",
+    "closeSideSheetButtonLabel": "Back",
     "newWorkoutButtonLabel": "New Workout",
+    "aboutButtonLabel": "About",
     "workoutListLabel": "My Workouts",
     "workoutLabel": "Workout",
     "setLabel": "Set",
@@ -48,11 +52,8 @@
     "restLabel": "Rest",
     "timeUnitLabel": "minute",
     "noWorkoutsLabel": "You haven't created any workouts yet.",
-    "createDialogHeaderLabel": "New Workout",
     "createWorkoutButtonLabel": "Create",
-    "editDialogHeaderLabel": "Edit Workout",
     "editWorkoutButtonLabel": "Update",
-    "cancelEditButtonLabel": "Cancel",
     "workoutNameFormFieldLabel": "Name",
     "workoutSetsFormFieldLabel": "Sets",
     "workoutExercisePerSetsFormFieldLabel": "Exercises / Set",
