--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -36,11 +36,15 @@
     "editWorkoutIconButtonDescriptionLabel": "Edzés Szerkesztése",
     "deleteWorkoutIconButtonLabel": "Töröl",
     "deleteWorkoutIconButtonDescriptionLabel": "Edzés törlése",
-    "aboutIconButtonLabel": "Infó",
-    "aboutIconButtonDescriptionLabel": "Infó a Tabata Max-ról",
+    "newWorkoutIconButtonLabel": "Létrehoz",
+    "newWorkoutIconButtonDescriptionLabel": "Új edzés létrehozása",
     "restoreWorkoutButtonLabel": "Visszaállít",
     "workoutDeletedLabel": "Edzés törölve.",
+    "createWorkoutNavHeaderLabel": "Új Edzés",
+    "editWorkoutNavHeaderLabel": "Edzés Szerkesztése",
+    "closeSideSheetButtonLabel": "Vissza",
     "newWorkoutButtonLabel": "Új Edzés",
+    "aboutButtonLabel": "Infó",
     "workoutListLabel": "Saját Edzéseim",
     "workoutLabel": "Edzés",
     "setLabel": "Kör",
@@ -48,11 +52,8 @@
     "restLabel": "Pihenés",
     "timeUnitLabel": "perc",
     "noWorkoutsLabel": "Még nem hoztál létre egyetlen edzést sem.",
-    "createDialogHeaderLabel": "Új Edzés",
     "createWorkoutButtonLabel": "Létrehoz",
-    "editDialogHeaderLabel": "Edzés Szerkesztése",
     "editWorkoutButtonLabel": "Frissít",
-    "cancelEditButtonLabel": "Mégsem",
     "workoutNameFormFieldLabel": "Név",
     "workoutSetsFormFieldLabel": "Kör",
     "workoutExercisePerSetsFormFieldLabel": "Gyakorlat / Kör",
