Deployed mobile view optimizations.

--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -5,6 +5,7 @@
     "exampleWorkoutName": "My Workout Routine",
     "aboutDialogHeader": "About",
     "closeAboutButtonLabel": "Close",
+    "backFromAboutButtonLabel": "Back",
     "applicationVersionLabel": "Version",
     "copyrightNotice": "2025 - Márk Szabó",
     "contactInformationLabel": "Contact",
@@ -28,6 +29,9 @@
     "desktopLayoutSettingLabel": "Desktop",
     "saveSettingsButtonLabel": "Save",
     "cancelSettingsButtonLabel": "Cancel",
+    "backFromSettingsButtonLabel": "Back",
+    "navigationDrawerButtonLabel": "Navigate",
+    "navigationDrawerButtonLabelDescriptionLabel": "Navigation Menu",
     "startWorkoutButtonLabel": "Start",
     "startWorkoutButtonDescriptionLabel": "Start Workout",
     "settingsIconButtonDescriptionLabel": "Settings",
