--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -5,6 +5,7 @@
     "exampleWorkoutName": "Az én edzésem",
     "aboutDialogHeader": "Infó",
     "closeAboutButtonLabel": "Bezár",
+    "backFromAboutButtonLabel": "Vissza",
     "applicationVersionLabel": "Verzió",
     "copyrightNotice": "2025 - Szabó Márk",
     "contactInformationLabel": "Kapcsolat",
@@ -28,6 +29,9 @@
     "desktopLayoutSettingLabel": "Asztali gép",
     "saveSettingsButtonLabel": "Ment",
     "cancelSettingsButtonLabel": "Mégse",
+    "backFromSettingsButtonLabel": "Vissza",
+    "navigationDrawerButtonLabel": "Navigáció",
+    "navigationDrawerButtonLabelDescriptionLabel": "Navigációs Menü",
     "startWorkoutButtonLabel": "Indít",
     "startWorkoutButtonDescriptionLabel": "Edzés indítása",
     "settingsIconButtonDescriptionLabel": "Beállítások",
