--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -2,9 +2,10 @@
   "locale": "en-US",
   "translations": {
     "applicationName": "Tabata Max",
-    "exampleWorkoutName": "My Workout Routine",
+    "exampleWorkoutName": "Basic Strength Workout",
     "aboutDialogHeader": "About",
     "closeAboutButtonLabel": "Close",
+    "aboutHeader": "About",
     "backFromAboutButtonLabel": "Back",
     "applicationVersionLabel": "Version",
     "copyrightNotice": "2025 - Márk Szabó",
@@ -16,6 +17,8 @@
     "rewindButtonLabel": "Rewind",
     "forwardButtonLabel": "Forward",
     "settingsDialogHeader": "Settings",
+    "saveSettingsButtonLabel": "Save",
+    "cancelSettingsButtonLabel": "Cancel",
     "languageFormFieldLabel": "Language",
     "layoutFormFieldLabel": "Layout",
     "soundSwitchLabel": "Sound",
@@ -27,8 +30,7 @@
     "smartPhoneLayoutSettingLabel": "Smartphone",
     "tabletLayoutSettingLabel": "Tablet",
     "desktopLayoutSettingLabel": "Desktop",
-    "saveSettingsButtonLabel": "Save",
-    "cancelSettingsButtonLabel": "Cancel",
+    "settingsHeader": "Settings",
     "backFromSettingsButtonLabel": "Back",
     "navigationDrawerButtonLabel": "Navigate",
     "navigationDrawerButtonLabelDescriptionLabel": "Navigation Menu",
