--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -2,9 +2,10 @@
   "locale": "hu-HU",
   "translations": {
     "applicationName": "Tabata Max",
-    "exampleWorkoutName": "Az én edzésem",
+    "exampleWorkoutName": "Alap Erőnléti Edzés",
     "aboutDialogHeader": "Infó",
     "closeAboutButtonLabel": "Bezár",
+    "aboutHeader": "Infó",
     "backFromAboutButtonLabel": "Vissza",
     "applicationVersionLabel": "Verzió",
     "copyrightNotice": "2025 - Szabó Márk",
@@ -27,6 +28,7 @@
     "smartPhoneLayoutSettingLabel": "Okostelefon",
     "tabletLayoutSettingLabel": "Táblagép",
     "desktopLayoutSettingLabel": "Asztali gép",
+    "settingsHeader": "Beállítások",
     "saveSettingsButtonLabel": "Ment",
     "cancelSettingsButtonLabel": "Mégse",
     "backFromSettingsButtonLabel": "Vissza",
