--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -28,6 +28,17 @@
     "desktopLayoutSettingLabel": "Desktop",
     "settingsHeader": "Settings",
     "backFromSettingsButtonLabel": "Back",
+    "appSummary": "Ready to unleash your inner warrior and conquer your fitness goals? Tabata Max is your ultimate web-based Tabata and HIIT timer, built to ignite your workouts and push your limits! Forget complicated setups; we've crafted an intuitive experience that gets you sweating faster and smarter. Get ready to transform your training and feel the burn, the fun way!",
+    "keyBenefitsHeader": "Why You'll Love Training with Tabata Max",
+    "keyBenefit1Label": "Pure, Uncluttered Focus",
+    "keyBenefit2Label": "See It, Hear It",
+    "keyBenefit3Label": "Works Anywhere, Anytime",
+    "keyBenefit4Label": "Instant Access, Anywhere",
+    "keyBenefit1": "Enjoy a clean, minimal design that cuts out the noise, letting you zero in on what truly matters: your performance!",
+    "keyBenefit2": "Clear audio and visual cues keep you perfectly in sync, so you can focus on your form, not the clock.",
+    "keyBenefit3": "Whether you're crushing it in your living room or at the gym, our design shines on all your devices – phone, tablet, or desktop!",
+    "keyBenefit4": "Jump right into your fitness journey with this web-based app – just open your browser! And the best part? You can even install it on your device to use it whenever you want, even without an internet connection.",
+    "callToActionLabel": "Are You Ready?",
     "navigationDrawerButtonLabel": "Navigate",
     "navigationDrawerButtonLabelDescriptionLabel": "Navigation Menu",
     "startWorkoutButtonLabel": "Start",
