--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -28,6 +28,17 @@
     "desktopLayoutSettingLabel": "Asztali gép",
     "settingsHeader": "Beállítások",
     "backFromSettingsButtonLabel": "Vissza",
+    "appSummary": "Készen állsz, hogy szabadjára engedd a benned rejlő harcost és meghódítsd a fitnesz céljaidat? A Tabata Max a tökéletes webes Tabata és HIIT számláló számodra, amely garantáltan beindítja az edzéseidet! Felejtsd el a bonyolult beállításokat; egy intuitív élményt hoztunk létre, amely gyorsabban és okosabban izzaszt. Emeld az edzéseidet új szintre, és érezd az fáradságot, a szórakoztató módon!",
+    "keyBenefitsHeader": "Miért fogod szeretni a Tabata Max-al való edzést?",
+    "keyBenefit1Label": "Tiszta, Zavartalan Összpontosítás",
+    "keyBenefit2Label": "Lásd, Halld",
+    "keyBenefit3Label": "Bárhol, Bármikor Működik",
+    "keyBenefit4Label": "Azonnali Hozzáférés, Bárhol",
+    "keyBenefit1": "Élvezd a letisztult, minimalista dizájnt, ami csak a lényegre fókuszál, így arra összpontosíthatsz, ami igazán számít: a teljesítményedre!",
+    "keyBenefit2": "A világos hang- és vizuális visszajelzések tökéletes szinkronban tartanak, így a gyakorlatokra koncentrálhatsz, nem az órára.",
+    "keyBenefit3": "Akár a nappalidban, akár az edzőteremben edzel, dizájnunk minden eszközödön - telefonon, táblagépen vagy asztali gépen - ragyogóan fest!",
+    "keyBenefit4": "Ugorj fejest a fitnesz utazásodba ezzel a webes alkalmazással – csak nyisd meg a böngésződben! És a legjobb rész? Akár telepítheted is az eszközödre, hogy bármikor használhasd, akár internetkapcsolat nélkül is.",
+    "callToActionLabel": "Készen állsz?",
     "navigationDrawerButtonLabel": "Navigáció",
     "navigationDrawerButtonLabelDescriptionLabel": "Navigációs Menü",
     "startWorkoutButtonLabel": "Indít",
@@ -53,7 +64,6 @@
     "exerciseLabel": "Gyakorlat",
     "restLabel": "Pihenés",
     "timeUnitLabel": "perc",
-  
     "createWorkoutButtonLabel": "Létrehoz",
     "editWorkoutButtonLabel": "Frissít",
     "workoutNameFormFieldLabel": "Név",
