--- a/locale/en-US/messages.json
+++ b/locale/en-US/messages.json
@@ -10,8 +10,8 @@
     "contactInformationLabel": "Contact",
     "madeInLabel": "Made in",
     "backToHomeButtonLabel": "Back",
-    "resumeButtonLabel": "Resume",
-    "pauseButtonLabel": "Pause",
+    "resumeButtonLabel": "Resume (Space bar)",
+    "pauseButtonLabel": "Pause (Space bar)",
     "rewindButtonLabel": "Rewind",
     "forwardButtonLabel": "Forward",
     "saveSettingsButtonLabel": "Save",
