--- a/locale/hu-HU/messages.json
+++ b/locale/hu-HU/messages.json
@@ -10,8 +10,8 @@
     "contactInformationLabel": "Kapcsolat",
     "madeInLabel": "Európában készült",
     "backToHomeButtonLabel": "Vissza",
-    "resumeButtonLabel": "Lejátszás",
-    "pauseButtonLabel": "Szünet",
+    "resumeButtonLabel": "Lejátszás (Space gomb)",
+    "pauseButtonLabel": "Szünet (Space gomb)",
     "rewindButtonLabel": "Hátra",
     "forwardButtonLabel": "Előre",
     "saveSettingsButtonLabel": "Ment",
